# midi_utils

./: copy_and_align.py  midi_utils.py  requirements.txt  setup.cfg
src/midi_utils/: midi_utils.py  test.py  utils.py
src/midi_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test.ipynb
