[metadata]
name = midi_utils
version = 0.0.1
author = Taegyun Kwon
author_email = ilcobo2@gmail.com
description = python midi handling package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mac-marg-pianist/midi_utils
project_urls =
    Bug Tracker = https://github.com/mac-marg-pianist/midi_utils/issue
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src